Updated ES6 WIP

--- a/testing/addreview.html
+++ b/testing/addreview.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-<form action="//193.63.200.53:8005/review" method="POST">
+<form action="//localhost:8005/review" method="POST">
 <fieldset>
 <legend>ADD POI FORM</legend>
 <label for="id"> POI ID: </label>
