--- a/testing/addpoi.html
+++ b/testing/addpoi.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-<form action="//193.63.200.53:8005/add" method="POST">
+<form action="//localhost:8005/add" method="POST">
 <fieldset>
 <legend>ADD POI FORM</legend>
 <label for="name"> Name: </label>
